tests/error/comptime/trivially_copy_overlapping_values1.bz
// error: destination address is null in call to '__builtin_trivially_copy_values'
// note: while evaluating expression at compile time
// error: failed to evaluate expression at compile time
function test()
{
	(consteval {
		let i = 0;

		__builtin_trivially_copy_overlapping_values(null as ?*mut i32, &i, 1);
	});
}
